--- a/src/browser/styles.css
+++ b/src/browser/styles.css
@@ -1,7 +1,39 @@
+body {
+  display: flex;
+  min-width: 300px;
+  min-height: 100%;
+  flex-direction: column;
+  background: rgba(247, 247, 252, 1);
+}
+
+.wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
 .blockchain {
+  flex: 1 0 auto;
 }
 
 .blockchain__container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 120px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .blockchain__container {
+    padding: 0 48px;
+  }
+}
+
+@media (max-width: 480px) {
+  .blockchain__container {
+    padding: 0 24px;
+  }
 }
 
 .blockchain__header {
@@ -11,6 +43,16 @@
 }
 
 .header__title {
+  font-size: 64px;
+  line-height: 80px;
+  letter-spacing: 1px;
+}
+
+@media (max-width: 480px) {
+  .header__title {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
 
 .blockchain__body {
@@ -22,13 +64,39 @@
 .transactions {
 }
 
+.transactions__fields {
+  margin-bottom: 32px;
+}
+
 .blockchain-block {
+  border-radius: 16px;
+  box-shadow: 0px 20px 24px rgba(17, 17, 17, 0.06);
+}
+
+.blockchain-block:not(:last-child) {
+  margin-bottom: 40px;
 }
 
 .blockchain-block__container {
+  padding: 44px 52px;
+}
+
+@media (max-width: 480px) {
+  .blockchain-block__container {
+    padding: 32px 24px;
+  }
 }
 
 .blockchain-block__title {
+  font-size: 32px;
+  line-height: 34px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.blockchain-block__controls {
+  display: flex;
+  justify-content: end;
 }
 
 .sender-input {
@@ -47,6 +115,22 @@
 }
 
 .btn {
+  padding: 18px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40px;
+  background-color: #5f2eea;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 22px;
+  border-width: 0;
+}
+
+@media (max-width: 480px) {
+  .btn {
+    flex: 1;
+  }
 }
 
 .blockchain__pending {
