доработки для блока transactions

--- a/src/browser/styles.css
+++ b/src/browser/styles.css
@@ -54,6 +54,13 @@ body {
   margin-bottom: 32px;
 }
 
+.transactions__fields-wrapper {
+  display: flex;
+  align-items: center;
+  margin-right: 24px;
+  flex: 2;
+}
+
 .blockchain-block {
   background: #fcfcfc;
   border-radius: 16px;
@@ -88,15 +95,27 @@ body {
 .recipient-input {
 }
 
+.amount-input {
+  flex: 1;
+}
+
 .arrow-right {
+  display: block;
+  width: 24px;
+  height: 24px;
+  padding: 0 19px;
+  background-image: url('arrow-right.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .transactions__transfer-btn {
 }
 
 .input {
+  width: 100%;
   padding: 18px 24px;
-  border-width: 0;
+  border: none;
   border-radius: 16px;
   background-color: #eff0f7;
   font-size: 16px;
@@ -109,13 +128,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #5f2eea;
   border-radius: 40px;
   background-color: #5f2eea;
   color: #ffffff;
   font-size: 18px;
   line-height: 22px;
-  border-width: 0;
   cursor: pointer;
+  transition-duration: 0.3s;
 }
 
 .blockchain__pending {
@@ -150,6 +170,14 @@ body {
   }
 }
 
+@media (max-width: 780px) {
+  .transactions__fields-wrapper {
+    flex: 100%;
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+}
+
 @media (max-width: 480px) {
   .blockchain__container {
     padding: 0 16px;
@@ -175,5 +203,20 @@ body {
     padding: 14px 32px;
     font-size: 16px;
     line-height: 20px;
+  }
+}
+
+@media (max-width: 360px) {
+  .arrow-right {
+    background-size: 16px;
+    padding: 0 8px;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  /* только для устройств с мышью */
+  .btn:hover {
+    background-color: #ffffff;
+    color: #5f2eea;
   }
 }
