--- a/src/browser/styles.css
+++ b/src/browser/styles.css
@@ -28,6 +28,7 @@ body {
 }
 
 .blockchain__header {
+  margin-bottom: 40px;
 }
 
 .header {
@@ -37,6 +38,15 @@ body {
   font-size: 44px;
   line-height: 60px;
   letter-spacing: 1px;
+}
+
+.header__status {
+  padding: 24px;
+  border-radius: 16px;
+  background-color: #e4daff;
+  color: #4e4b66;
+  font-size: 24px;
+  line-height: 38px;
 }
 
 .blockchain__body {
@@ -197,6 +207,7 @@ body {
 
 .block__prev-hash {
   width: 50%;
+  margin-right: 10px;
 }
 
 .hash-title {
