--- a/src/browser/styles.css
+++ b/src/browser/styles.css
@@ -392,7 +392,7 @@ body {
   outline: 2px solid #696eff;
 }
 
-/* .input:invalid:focus {
+.input:invalid {
   background-color: #fff3f8;
   border: 2px solid #ed2e7e;
-} */
+}
